--- a/src/components/Textinput/Textinput.css
+++ b/src/components/Textinput/Textinput.css
@@ -1,50 +1,26 @@
 .Textinput {
-  --textinput-height: 40px;
-  --textinput-border: 1px solid #F1F1F1;
-  --textinput-border-radius: 20px;
-  --textinput-placeholder-color: #9d9d9d;
-  --textinput-placeholder-raised-font-size: 12px;
-
-  height: var(--textinput-height);
-  border: var(--textinput-border);
-  border-radius: var(--textinput-border-radius);
-  position: relative;
-  cursor: text;
+    
 }
 
-.Textinput__Control {
-  width: 100%;
-  height: 100%;
-  border: none;
-  outline: none;
-  border-radius: var(--textinput-border-radius);
-  font-size: var(--font-size-default);
-  padding-left: 20px;
+.Textinput-Label {
+    display: block;
+    color: #9f9f9f;
+    font-size: 14px;
+    margin-bottom: 2px;
 }
 
-.Textinput__Control::placeholder {
-  color: var(--textinput-placeholder-color);
+.Textinput-Box {
+    height: 40px;
+    border-radius: 5px;
+    border: 1px solid #e6e6e6;
 }
 
-.Textinput__Placeholder {
-  display: inline-flex;
-  align-items: center;
-  color: var(--textinput-placeholder-color);
-  position: absolute;
-  top: 0;
-  left: 20px;
-  transform: translateY(55%);
-  transition: all .2s ease;
-  opacity: 0;
-}
-
-.Textinput__Placeholder_visible {
-  opacity: 1;
-}
-
-.Textinput__Placeholder_raised {
-  transform: translate(-5px, -6px);
-  font-size: var(--textinput-placeholder-raised-font-size);
-  background: #fff;
-  padding: 0 4px;
+.Textinput-Control {
+    width: 100%;
+    height: 100%;
+    border: none;
+    border-radius: 5px;
+    outline: none;
+    font-size: 16px;
+    padding-left: 17px;
 }
