--- a/src/components/Textinput/Textinput.css
+++ b/src/components/Textinput/Textinput.css
@@ -2,20 +2,21 @@
     
 }
 
-.Textinput-Label {
+.Textinput__Label {
     display: block;
     color: #9f9f9f;
     font-size: 14px;
     margin-bottom: 2px;
 }
 
-.Textinput-Box {
+.Textinput__Box {
     height: 40px;
     border-radius: 5px;
     border: 1px solid #e6e6e6;
+    margin-bottom: 2px;
 }
 
-.Textinput-Control {
+.Textinput__Control {
     width: 100%;
     height: 100%;
     border: none;
@@ -23,4 +24,13 @@
     outline: none;
     font-size: 16px;
     padding-left: 17px;
+}
+
+.Textinput__Error {
+    color: #ff5b7a;
+    font-size: 14px;
+    text-align: right;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
