--- a/src/components/Factors/Group/Category/Factor/Factor.css
+++ b/src/components/Factors/Group/Category/Factor/Factor.css
@@ -1,12 +1,12 @@
-.Factor {
+.Factor__button {
     border: 1px solid #000;
 }
 
-.Factor_active {
+.Factor_active .Factor__button {
     background: #000;
     color: #fff;
 }
 
-.Factor_disabled {
+.Factor_disabled .Factor__button {
     background: #aeaeae;
 }
